--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:theme="@style/Theme.SopkathonAndroid3"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity android:name=".SplashActivity"
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".presentation.calendar.CalendarActivity"
             android:exported="false" />
@@ -30,7 +34,17 @@
         </activity>
         <activity
             android:name=".presentation.dummy.DummyActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
+
+        <activity android:name=".presentation.shake.ShakeActivity"
+            android:exported="false">
+        </activity>
+
+        <activity android:name=".presentation.healing.HealingActivity"
+            android:exported="true">
+
+
+        </activity>
     </application>
 
 </manifest>
