--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:name=".SopkathonApp"
@@ -18,26 +19,30 @@
         tools:targetApi="31">
         <activity android:name=".SplashActivity"
             android:exported="true">
-
         </activity>
+        <activity android:name=".presentation.detail.DetailActivity"
+            android:exported="false" />
+        <activity android:name=".presentation.question.QuestionActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.calendar.CalendarActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.main.MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".presentation.dummy.DummyActivity"
             android:exported="true" />
 
         <activity android:name=".presentation.shake.ShakeActivity"
-            android:exported="false">
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity android:name=".presentation.healing.HealingActivity"
